Signed-off-by: LiuHan <liuhan77@h-partners.com>

--- a/code/DocsSample/Ability/AbilityStage/entry/src/main/module.json5
+++ b/code/DocsSample/Ability/AbilityStage/entry/src/main/module.json5
@@ -23,8 +23,7 @@
     "description": "$string:module_desc",
     "mainElement": "EntryAbility",
     "deviceTypes": [
-      "phone",
-      "2in1",
+      "default",
       "tablet"
     ],
     "deliveryWithInstall": true,
@@ -63,9 +62,9 @@
             "name": "ohos.extension.backup",
             "resource": "$profile:backup_config"
           }
-        ],
+        ]
       }
-    ],
+    ]
     // [EndExclude abilityModule_start]
   }
 }
