--- a/code/DocsSample/Ability/AppLinking/entry/src/main/module.json5
+++ b/code/DocsSample/Ability/AppLinking/entry/src/main/module.json5
@@ -21,7 +21,8 @@
     "description": "$string:module_desc",
     "mainElement": "EntryAbility",
     "deviceTypes": [
-      "phone"
+      "default",
+      "tablet"
     ],
     "deliveryWithInstall": true,
     "installationFree": false,
@@ -107,9 +108,9 @@
             "name": "ohos.extension.backup",
             "resource": "$profile:backup_config"
           }
-        ],
+        ]
       }
-    ],
+    ]
     // [EndExclude app_link]
   }
 }
