--- a/code/DocsSample/Ability/StartAbility/entry/src/main/module.json5
+++ b/code/DocsSample/Ability/StartAbility/entry/src/main/module.json5
@@ -37,6 +37,7 @@
     "mainElement": "StartAbilityEntry",
     "deviceTypes": [
       "default",
+      "tablet"
     ],
     "deliveryWithInstall": true,
     "installationFree": false,
