--- a/code/DocsSample/Ability/WantOverview/entry/src/main/module.json5
+++ b/code/DocsSample/Ability/WantOverview/entry/src/main/module.json5
@@ -19,8 +19,7 @@
     "description": "$string:module_desc",
     "mainElement": "EntryAbility",
     "deviceTypes": [
-      "phone",
-      "2in1",
+      "default",
       "tablet"
     ],
     "deliveryWithInstall": true,
@@ -99,7 +98,7 @@
             "name": "ohos.extension.backup",
             "resource": "$profile:backup_config"
           }
-        ],
+        ]
       }
     ]
   }
