--- a/code/DocsSample/Ability/AppStartup/entry/src/ohosTest/module.json5
+++ b/code/DocsSample/Ability/AppStartup/entry/src/ohosTest/module.json5
@@ -18,7 +18,7 @@
     "type": "feature",
     "deviceTypes": [
       "default",
-      "2in1"
+      "tablet"
     ],
     "deliveryWithInstall": true,
     "installationFree": false
