--- a/code/DocsSample/Ability/AppStartup/hsp1/src/ohosTest/module.json5
+++ b/code/DocsSample/Ability/AppStartup/hsp1/src/ohosTest/module.json5
@@ -17,7 +17,8 @@
     "name": "hsp1_test",
     "type": "feature",
     "deviceTypes": [
-      "default"
+      "default",
+      "tablet"
     ],
     "deliveryWithInstall": true,
     "installationFree": false
