--- a/code/DocsSample/Ability/AppStartup/hsp2/src/main/module.json5
+++ b/code/DocsSample/Ability/AppStartup/hsp2/src/main/module.json5
@@ -24,11 +24,10 @@
     // [StartExclude startup_hsp2module]
     "deviceTypes": [
       "default",
-      "tablet",
-      "2in1"
+      "tablet"
     ],
     "deliveryWithInstall": true,
-    "pages": "$profile:main_pages",
+    "pages": "$profile:main_pages"
     // [EndExclude startup_hsp2module]
   }
 }
