--- a/code/DocsSample/Ability/AppStartup/hsp2/src/ohosTest/module.json5
+++ b/code/DocsSample/Ability/AppStartup/hsp2/src/ohosTest/module.json5
@@ -17,9 +17,8 @@
     "name": "hsp2_test",
     "type": "feature",
     "deviceTypes": [
-      "phone",
-      "tablet",
-      "2in1"
+      "default",
+      "tablet"
     ],
     "deliveryWithInstall": true,
     "installationFree": false
