--- a/code/DocsSample/Ability/ApplicationContextDemo/entry/src/ohosTest/module.json5
+++ b/code/DocsSample/Ability/ApplicationContextDemo/entry/src/ohosTest/module.json5
@@ -17,8 +17,7 @@
     "name": "entry_test",
     "type": "feature",
     "deviceTypes": [
-      "phone",
-      "2in1",
+      "default",
       "tablet"
     ],
     "deliveryWithInstall": true,
