--- a/code/DocsSample/Ability/EnvConfig/entry/src/ohosTest/module.json5
+++ b/code/DocsSample/Ability/EnvConfig/entry/src/ohosTest/module.json5
@@ -17,7 +17,8 @@
     "name": "entry_test",
     "type": "feature",
     "deviceTypes": [
-      "phone"
+      "default",
+      "tablet"
     ],
     "deliveryWithInstall": true,
     "installationFree": false
