--- a/code/DocsSample/Ability/StartAbility/entry/src/ohosTest/module.json5
+++ b/code/DocsSample/Ability/StartAbility/entry/src/ohosTest/module.json5
@@ -19,6 +19,7 @@
     "type": "feature",
     "deviceTypes": [
       "default",
+      "tablet"
     ],
     "deliveryWithInstall": true,
     "installationFree": false,
