--- a/code/DocsSample/Ability/UIAbilityLifecycle/entry/src/main/module.json5
+++ b/code/DocsSample/Ability/UIAbilityLifecycle/entry/src/main/module.json5
@@ -22,7 +22,8 @@
     "description": "$string:module_desc",
     "mainElement": "EntryAbility",
     "deviceTypes": [
-      "phone",
+      "default",
+      "tablet"
     ],
     "deliveryWithInstall": true,
     "installationFree": false,
