--- a/code/DocsSample/bmsSample/ModuleConfigurationFile05/build-profile.json5
+++ b/code/DocsSample/bmsSample/ModuleConfigurationFile05/build-profile.json5
@@ -20,9 +20,10 @@
       {
         "name": "default",
         "signingConfig": "default",
-        "targetSdkVersion": "5.1.1(19)",
-        "compatibleSdkVersion": "5.0.5(17)",
-        "runtimeOS": "HarmonyOS",
+        "targetSdkVersion": 19,
+        "compatibleSdkVersion": 19,
+        "compileSdkVersion": 19,
+        "runtimeOS": "OpenHarmony",
         "buildOption": {
           "strictMode": {
             "caseSensitiveCheck": true,
