--- a/code/DocsSample/bmsSample/NativeBundleGuidelines/build-profile.json5
+++ b/code/DocsSample/bmsSample/NativeBundleGuidelines/build-profile.json5
@@ -21,9 +21,10 @@
       {
         "name": "default",
         "signingConfig": "default",
-        "targetSdkVersion": "5.1.1(19)",
-        "compatibleSdkVersion": "5.1.1(19)",
-        "runtimeOS": "HarmonyOS",
+        "targetSdkVersion": 22,
+        "compatibleSdkVersion": 22,
+        "compileSdkVersion": 22,
+        "runtimeOS": "OpenHarmony",
         "buildOption": {
           "externalNativeOptions": {
             "abiFilters": [
