--- a/code/DocsSample/ArkData/RelationalStore/DataSync&Persistence/build-profile.json5
+++ b/code/DocsSample/ArkData/RelationalStore/DataSync&Persistence/build-profile.json5
@@ -32,10 +32,10 @@
     "products": [
       {
         "name": "default",
-        "signingConfig": "default",
-        "targetSdkVersion": "5.0.5(17)",
-        "compatibleSdkVersion": "5.0.5(17)",
-        "runtimeOS": "HarmonyOS",
+        "compileSdkVersion": 20,
+        "targetSdkVersion": 20,
+        "compatibleSdkVersion": 20,
+        "runtimeOS": "OpenHarmony",
         "buildOption": {
           "strictMode": {
             "caseSensitiveCheck": true,
