--- a/code/DocsSample/MindSporeLiteKit/MindSporeLiteArkTSDemo/oh-package.json5
+++ b/code/DocsSample/MindSporeLiteKit/MindSporeLiteArkTSDemo/oh-package.json5
@@ -14,16 +14,12 @@
 */
 
 {
-  "name": "mindsporelitearktsdemo",
-  "version": "1.0.0",
+  "modelVersion": "5.0.5",
   "description": "Please describe the basic information.",
-  "main": "",
-  "author": "",
-  "license": "",
   "dependencies": {
   },
   "devDependencies": {
-    "@ohos/hypium": "1.0.16",
+    "@ohos/hypium": "1.0.21",
     "@ohos/hamock": "1.0.0"
   }
 }
