--- a/code/DocsSample/MindSporeLiteKit/MindSporeLiteCDemoASR/build-profile.json5
+++ b/code/DocsSample/MindSporeLiteKit/MindSporeLiteCDemoASR/build-profile.json5
@@ -20,7 +20,7 @@
         "name": "default",
         "signingConfig": "default",
         "compatibleSdkVersion": 14,
-        "compileSdkVersion": 14,
+        "compileSdkVersion": 19,
         "runtimeOS": "OpenHarmony",
         "buildOption": {
           "strictMode": {
@@ -32,7 +32,7 @@
     ],
     "buildModeSet": [
       {
-        "name": "debug",
+        "name": "debug"
       },
       {
         "name": "release"
