修改版本号及runtimeOS
Signed-off-by: zhushuanghong <zhushuanghong5@huawei.com>

--- a/code/SystemFeature/TaskManagement/TransientTask/entry/src/main/module.json5
+++ b/code/SystemFeature/TaskManagement/TransientTask/entry/src/main/module.json5
@@ -21,9 +21,8 @@
     "description": "$string:entry_desc",
     "mainElement": "EntryAbility",
     "deviceTypes": [
-      "phone",
-      "tablet",
-      "2in1"
+      "default",
+      "tablet"
     ],
     "deliveryWithInstall": true,
     "installationFree": false,
