--- a/code/BasicFeature/TaskManagement/NativeTransientTask/entry/build-profile.json5
+++ b/code/BasicFeature/TaskManagement/NativeTransientTask/entry/build-profile.json5
@@ -25,6 +25,11 @@
       "path": "./src/main/cpp/CMakeLists.txt",
       "arguments": "",
       "cppFlags": "",
+      "abiFilters": [
+        "arm64-v8a",
+        "x86_64",
+        "armeabi-v7a"
+      ]
     }
   },
   "buildOptionSet": [
