--- a/code/SystemFeature/TaskManagement/TransientTask/build-profile.json5
+++ b/code/SystemFeature/TaskManagement/TransientTask/build-profile.json5
@@ -20,8 +20,10 @@
       {
         "name": "default",
         "signingConfig": "default",
-        "compatibleSdkVersion": "5.0.4(16)",
-        "runtimeOS": "HarmonyOS",
+        "compileSdkVersion": 20,
+        "targetSdkVersion": 20,
+        "compatibleSdkVersion": 20,
+        "runtimeOS": "OpenHarmony",
         "buildOption": {
           "strictMode": {
             "caseSensitiveCheck": true,
