--- a/code/DocsSample/CoreFile/AppFileBackup/entry/src/main/module.json5
+++ b/code/DocsSample/CoreFile/AppFileBackup/entry/src/main/module.json5
@@ -20,8 +20,7 @@
     "description": "$string:module_desc",
     "mainElement": "EntryAbility",
     "deviceTypes": [
-      "default",
-      "tablet"
+      "default"
     ],
     "deliveryWithInstall": true,
     "installationFree": false,
