--- a/code/DocsSample/ArkData/RelationalStore/DataSync&Persistence/build-profile.json5
+++ b/code/DocsSample/ArkData/RelationalStore/DataSync&Persistence/build-profile.json5
@@ -32,6 +32,7 @@
     "products": [
       {
         "name": "default",
+        "signingConfig": "default",
         "compileSdkVersion": 20,
         "targetSdkVersion": 20,
         "compatibleSdkVersion": 20,
