--- a/code/DocsSample/ArkData/Aip/build-profile.json5
+++ b/code/DocsSample/ArkData/Aip/build-profile.json5
@@ -20,9 +20,9 @@
       {
         "name": "default",
         "signingConfig": "default",
-        "targetSdkVersion": "5.0.3(15)",
-        "compatibleSdkVersion": "5.0.3(15)",
-        "runtimeOS": "HarmonyOS",
+        "targetSdkVersion": "20",
+        "compatibleSdkVersion": "20",
+        "runtimeOS": "OpenHarmony",
         "buildOption": {
           "strictMode": {
             "caseSensitiveCheck": true,
