--- a/code/DocsSample/ArkData/DataShare/ShareConfig/entry/src/ohosTest/module.json5
+++ b/code/DocsSample/ArkData/DataShare/ShareConfig/entry/src/ohosTest/module.json5
@@ -18,7 +18,7 @@
     "name": "entry_test",
     "type": "feature",
     "deviceTypes": [
-      "phone"
+      "default"
     ],
     "deliveryWithInstall": true,
     "installationFree": false
