--- a/code/DocsSample/hapAppDcameraSample/build-profile.json5
+++ b/code/DocsSample/hapAppDcameraSample/build-profile.json5
@@ -20,15 +20,16 @@
       {
         "name": "default",
         "signingConfig": "default",
-        "compatibleSdkVersion": "6.0.0(20)",
-        "runtimeOS": "HarmonyOS",
+        "compileSdkVersion": 20,
+        "compatibleSdkVersion": 20,
+        "runtimeOS": "OpenHarmony",
         "buildOption": {
           "strictMode": {
             "caseSensitiveCheck": true,
             "useNormalizedOHMUrl": true
           }
         },
-        "targetSdkVersion": "6.0.0(20)"
+        "targetSdkVersion": 20
       }
     ],
     "buildModeSet": [
