--- a/code/DocsSample/ArkData/RelationalStore/NativeDataEncryption/entry/src/ohosTest/module.json5
+++ b/code/DocsSample/ArkData/RelationalStore/NativeDataEncryption/entry/src/ohosTest/module.json5
@@ -19,7 +19,7 @@
     "name": "entry_test",
     "type": "feature",
     "deviceTypes": [
-      "phone"
+      "default"
     ],
     "deliveryWithInstall": true,
     "installationFree": false
