--- a/code/DocsSample/ArkData/RelationalStore/NativeDataEncryption/entry/src/main/module.json5
+++ b/code/DocsSample/ArkData/RelationalStore/NativeDataEncryption/entry/src/main/module.json5
@@ -21,7 +21,7 @@
     "description": "$string:module_desc",
     "mainElement": "EntryAbility",
     "deviceTypes": [
-      "phone"
+      "default"
     ],
     "deliveryWithInstall": true,
     "installationFree": false,
