修改NetFireWall_case版本号
Signed-off-by: pjie131_ <panjie42@h-partners.com>

--- a/code/DocsSample/NetWork_Kit/NetWorkKit_NetManager/NetFireWall_case/build-profile.json5
+++ b/code/DocsSample/NetWork_Kit/NetWorkKit_NetManager/NetFireWall_case/build-profile.json5
@@ -4,9 +4,10 @@
       {
         "name": "default",
         "signingConfig": "default",
-        "targetSdkVersion": "5.0.3(15)",
-        "compatibleSdkVersion": "5.0.3(15)",
-        "runtimeOS": "HarmonyOS",
+        "targetSdkVersion": 15,
+        "compatibleSdkVersion": 15,
+        "compileSdkVersion": 15,
+        "runtimeOS": "OpenHarmony",
         "buildOption": {
           "strictMode": {
             "caseSensitiveCheck": true,
