--- a/code/DocsSample/ArkData/DataObject/CrossDeviceCollaboration/build-profile.json5
+++ b/code/DocsSample/ArkData/DataObject/CrossDeviceCollaboration/build-profile.json5
@@ -19,9 +19,10 @@
       {
         "name": "default",
         "signingConfig": "default",
-        "targetSdkVersion": "5.1.0(18)",
-        "compatibleSdkVersion": "5.1.0(18)",
-        "runtimeOS": "HarmonyOS",
+        "targetSdkVersion": 20,
+        "compileSdkVersion": 20,
+        "compatibleSdkVersion": 20,
+        "runtimeOS": "OpenHarmony",
         "buildOption": {
           "strictMode": {
             "caseSensitiveCheck": true,
