--- a/code/DocsSample/ArkData/DataObject/CrossDeviceCollaboration/entry/src/main/module.json5
+++ b/code/DocsSample/ArkData/DataObject/CrossDeviceCollaboration/entry/src/main/module.json5
@@ -20,10 +20,7 @@
     "description": "$string:module_desc",
     "mainElement": "EntryAbility",
     "deviceTypes": [
-      "phone",
-      "tablet",
-      "2in1",
-      "wearable"
+      "default"
     ],
     "deliveryWithInstall": true,
     "installationFree": false,
