--- a/code/DocsSample/ArkData/DataObject/CrossDeviceCollaboration/entry/src/ohosTest/module.json5
+++ b/code/DocsSample/ArkData/DataObject/CrossDeviceCollaboration/entry/src/ohosTest/module.json5
@@ -18,10 +18,7 @@
     "name": "entry_test",
     "type": "feature",
     "deviceTypes": [
-      "phone",
-      "tablet",
-      "2in1",
-      "wearable"
+      "default"
     ],
     "deliveryWithInstall": true,
     "installationFree": false
