修改项目的编译sdk和依赖方式
Signed-off-by: jiangminsen <jiangminsen@h-partners.com>

--- a/code/Project/ApplicationHap/CallHapInHsp/build-profile.json5
+++ b/code/Project/ApplicationHap/CallHapInHsp/build-profile.json5
@@ -21,8 +21,10 @@
       {
         "name": "default",
         "signingConfig": "default",
-        "compatibleSdkVersion": "5.0.3(15)",
-        "runtimeOS": "HarmonyOS",
+        "targetSdkVersion": 15,
+        "compatibleSdkVersion": 15,
+        "compileSdkVersion": 15,
+        "runtimeOS": "OpenHarmony",
         "buildOption": {
           "strictMode": {
             "caseSensitiveCheck": true,
