--- a/code/DocsSample/input/ArkTSInputConsumer/entry/src/ohosTest/module.json5
+++ b/code/DocsSample/input/ArkTSInputConsumer/entry/src/ohosTest/module.json5
@@ -17,12 +17,7 @@
     "name": "entry_test",
     "type": "feature",
     "deviceTypes": [
-      "phone",
-      "tablet",
-      "2in1",
-      "car",
-      "wearable",
-      "tv"
+      "default"
     ],
     "deliveryWithInstall": true,
     "installationFree": false
