--- a/code/Solutions/InputMethod/KikaInputMethod/entry/src/main/module.json5
+++ b/code/Solutions/InputMethod/KikaInputMethod/entry/src/main/module.json5
@@ -36,8 +36,8 @@
     // [Start input_case_entry_module_extensionAbilities]
     "extensionAbilities": [
       {
-        "srcEntry": "./ets/ServiceExtAbility/ServiceExtAbility.ets",
-        "name": "ServiceExtAbility",
+        "srcEntry": "./ets/InputMethodExtensionAbility/InputMethodService.ets",
+        "name": "InputMethodService",
         "label": "$string:MainAbility_label",
         "description": "$string:extension_ability_descripter",
         "type": "inputMethod",
