--- a/code/Solutions/InputMethod/KikaInputMethod/build-profile.json5
+++ b/code/Solutions/InputMethod/KikaInputMethod/build-profile.json5
@@ -26,8 +26,9 @@
             "abiFilters": ["arm64-v8a", "x86_64"]
           },
         },
-        "compileSdkVersion": 22,
-        "compatibleSdkVersion": 22,
+        "compileSdkVersion": 20,
+        "compatibleSdkVersion": 20,
+        "targetSdkVersion": 20,
         "runtimeOS": "OpenHarmony"
       }
     ]
