update: 更新文件 build-profile.json5
Signed-off-by: gcw_RYdx6Zzw <zhongjie35@huawei.com>

--- a/code/SystemFeature/Security/DLP/build-profile.json5
+++ b/code/SystemFeature/Security/DLP/build-profile.json5
@@ -18,11 +18,12 @@
     "signingConfigs": [],
     "products": [
       {
-        "name": "default",
-        "signingConfig": "default",
-        "compileSdkVersion": 10,
-        "compatibleSdkVersion": 10,
-        "runtimeOS": "OpenHarmony"
+       "name": "default",
+       "signingConfig": "default",
+       "compileSdkVersion": 22,
+       "compatibleSdkVersion": 22,
+       "runtimeOS": "OpenHarmony",
+       "targetSdkVersion": 22
       }
     ],
     "buildModeSet": [
