update: 更新文件 build-profile.json5
Signed-off-by: gcw_RYdx6Zzw <zhongjie35@huawei.com>

--- a/code/BasicFeature/Security/FilePreviewDLP/build-profile.json5
+++ b/code/BasicFeature/Security/FilePreviewDLP/build-profile.json5
@@ -22,7 +22,7 @@
         "signingConfig": "default",
         "compatibleSdkVersion": "13",
         "compileSdkVersion": "13",
-        "runtimeOS": "HarmonyOS",
+        "runtimeOS": "OpenHarmony",
         "buildOption": {
           "strictMode": {
             "caseSensitiveCheck": true,
