fix sdk version about jsvm in 'sample'
Signed-off-by: gaojunyu <gaojunyu2@h-partners.com>

--- a/code/DocsSample/ArkTS/JSVMAPI/JsvmDebug/runtimetask/src/main/module.json5
+++ b/code/DocsSample/ArkTS/JSVMAPI/JsvmDebug/runtimetask/src/main/module.json5
@@ -20,7 +20,7 @@
     "description": "$string:module_desc",
     "mainElement": "RuntimetaskAbility",
     "deviceTypes": [
-      "phone",
+      "default",
       "tablet"
     ],
     "deliveryWithInstall": true,
