--- a/code/DocsSample/ArkTS/JSVMAPI/JsvmUsageGuide/JsvmAboutArray/build-profile.json5
+++ b/code/DocsSample/ArkTS/JSVMAPI/JsvmUsageGuide/JsvmAboutArray/build-profile.json5
@@ -20,9 +20,10 @@
       {
         "name": "default",
         "signingConfig": "default",
-        "compatibleSdkVersion": "5.0.3(15)",
-        "targetSdkVersion": "5.0.3(15)",
-        "runtimeOS": "HarmonyOS",
+        "compatibleSdkVersion": 15,
+        "compileSdkVersion": 15,
+        "targetSdkVersion": 15,
+        "runtimeOS": "OpenHarmony",
         "buildOption": {
           "strictMode": {
             "caseSensitiveCheck": true,
