IssueNo:#7713 Description:[新需求]:hnp支持独立签名 Sig:bundleManager Feature or Bugfix:Feature Binary Source:No
Signed-off-by: daiyujia <daiyujia@h-partners.com>
Change-Id: I6ef711dd68c79b5e4621e6f382362172ac2a7ac5

--- a/code/DocsSample/bmsSample/ModuleConfigurationFile05/entry/src/main/module.json5
+++ b/code/DocsSample/bmsSample/ModuleConfigurationFile05/entry/src/main/module.json5
@@ -31,7 +31,8 @@
     "hnpPackages": [
       {
         "package": "hnpsample.hnp",
-        "type": "public"
+        "type": "public",
+        "independentSign": true
       }
     ],
     // [StartExclude module_hnpPackages]
