huangshiwei4@huawei.com
Signed-off-by: huangshiwei4 <huangshiwei4@huawei.com>

--- a/code/SystemFeature/Security/DLP/build-profile.json5
+++ b/code/SystemFeature/Security/DLP/build-profile.json5
@@ -22,6 +22,7 @@
         "signingConfig": "default",
         "compileSdkVersion": 21,
         "compatibleSdkVersion": 21,
+        "targetSdkVersion": 21,
         "runtimeOS": "OpenHarmony",
       }
     ],
