构建脚本指令补全
Signed-off-by: wangxiaofei <wangxiaofei45@h-partners.com>

--- a/code/DocsSample/ArkTS/NodeAPI/NodeAPIClassicUseCases/NodeAPIApplicationScenario/entry/src/main/cpp/CMakeLists.txt
+++ b/code/DocsSample/ArkTS/NodeAPI/NodeAPIClassicUseCases/NodeAPIApplicationScenario/entry/src/main/cpp/CMakeLists.txt
@@ -13,3 +13,6 @@ include_directories(${NATIVERENDER_ROOT_PATH}
 
 add_library(entry SHARED napi_init.cpp)
 target_link_libraries(entry PUBLIC libace_napi.z.so libhilog_ndk.z.so)
+
+add_library(entry1 SHARED thread_safety.cpp)
+target_link_libraries(entry1 PUBLIC libace_napi.z.so libhilog_ndk.z.so)
