--- a/code/DocsSample/Media/Image/ImageArkTSSample/entry/build-profile.json5
+++ b/code/DocsSample/Media/Image/ImageArkTSSample/entry/build-profile.json5
@@ -16,6 +16,11 @@
 {
   "apiType": "stageMode",
   "buildOption": {
+    "resOptions": {
+      "copyCodeResource": {
+        "enable": true
+      },
+    }
   },
   "buildOptionSet": [
     {
