修改设备管理Sample键盘输入问题 修改CameraSample权限标题显示问题 修改OHAudio播放进度显示问题 修改Startup崩溃问题 修改ComponentCollection组件拖拽问题 更新部分项目ignore文件
Signed-off-by: haoxiaohui <haoxiaohui1@huawei.com>

--- a/code/UI/ArkTsComponentCollection/ComponentCollection/.gitignore
+++ b/code/UI/ArkTsComponentCollection/ComponentCollection/.gitignore
@@ -1,8 +1,11 @@
-**/node_modules
+/node_modules
+/oh_modules
 /local.properties
 /.idea
 **/build
 /.hvigor
-**/oh-package-lock.json5
-/entry/.preview
-/oh_modules
+.cxx
+/.clangd
+/.clang-format
+/.clang-tidy
+**/.test
