--- a/code/DocsSample/ArkUISample/NavigationSample/entry/src/main/module.json5
+++ b/code/DocsSample/ArkUISample/NavigationSample/entry/src/main/module.json5
@@ -27,7 +27,7 @@
     "installationFree": false,
     "pages": "$profile:main_pages",
     // [EndExclude moduleJson5]
-    "routerMap": "$profile:route_map",
+    "routerMap": "$profile:router_map",
     // [StartExclude moduleJson5]
     "abilities": [
       {
