Ability新增字段allowSelfRedirect 同步更新示例
Signed-off-by: small_leek <xiasenlin1@huawei.com>

--- a/code/DocsSample/bmsSample/ModuleConfigurationFile01/myHapName/src/main/module.json5
+++ b/code/DocsSample/bmsSample/ModuleConfigurationFile01/myHapName/src/main/module.json5
@@ -95,6 +95,7 @@
         "startWindowIcon": "$media:icon",
         "startWindowBackground": "$color:red",
         "removeMissionAfterTerminate": true,
+        "allowSelfRedirect": true,  // 从API version 23开始，支持该标签
         "orientation": "$string:orientation",
         "supportWindowMode": [
           "fullscreen",
