Description:readme修改 Binary Source:No Signed-off-by:songjiawei9 <songjiawei9@h-partners.com>

--- a/code/DocsSample/SelectionService/SelectionAppSample/entry/src/main/module.json5
+++ b/code/DocsSample/SelectionService/SelectionAppSample/entry/src/main/module.json5
@@ -49,16 +49,10 @@
     ],
     "extensionAbilities": [
       {
-        "name": "EntryBackupAbility",
-        "srcEntry": "./ets/entrybackupability/EntryBackupAbility.ets",
-        "type": "backup",
+        "name": "SelectionExtAbility",
+        "srcEntry": "./ets/selectionextability/SelectionExtAbility.ets",
+        "type": "selection",
         "exported": false,
-        "metadata": [
-          {
-            "name": "ohos.extension.backup",
-            "resource": "$profile:backup_config"
-          }
-        ],
       }
     ]
   }
