新增ArkWeb抛滑丢帧同源代码
Signed-off-by: pxlstrong <pengxiaolong18@huawei.com>

--- a/code/DocsSample/PerformanceAnalysisKit/HiAppEvent/EventSub/entry/src/main/module.json5
+++ b/code/DocsSample/PerformanceAnalysisKit/HiAppEvent/EventSub/entry/src/main/module.json5
@@ -23,6 +23,13 @@
       "default",
       "tablet"
     ],
+    // [Start ArkWeb_Fling_Jank_NetWork]
+    "requestPermissions": [
+      {
+        "name": "ohos.permission.INTERNET"
+      }
+    ],
+    // [End ArkWeb_Fling_Jank_NetWork]
     "deliveryWithInstall": true,
     "installationFree": false,
     "pages": "$profile:main_pages",
