--- a/code/DocsSample/ArkTS/NodeAPI/NodeAPIClassicUseCases/NodeAPIApplicationScenario/entry/build-profile.json5
+++ b/code/DocsSample/ArkTS/NodeAPI/NodeAPIClassicUseCases/NodeAPIApplicationScenario/entry/build-profile.json5
@@ -27,6 +27,11 @@
     },
 // [End napi_event_loop_build]
 // [End napi_ark_runtime_build]
+    "sourceOption": {
+      "workers": [
+        "./src/main/ets/worker/worker.ets"
+      ]
+    },
     "externalNativeOptions": {
       "path": "./src/main/cpp/CMakeLists.txt",
       "arguments": "",
