--- a/code/DocsSample/Form/ReloadFormsDoc/AppScope/app.json5
+++ b/code/DocsSample/Form/ReloadFormsDoc/AppScope/app.json5
@@ -1,6 +1,6 @@
 {
   "app": {
-    "bundleName": "com.zglee.myapplication",
+    "bundleName": "com.samples.reloadFormsDoc",
     "vendor": "example",
     "versionCode": 1000000,
     "versionName": "1.0.0",
