以弹窗得形式显示方法调用是否成功
Signed-off-by: lixiaoying25 <lixiaoying25@h-partners.com>

--- a/code/DocsSample/IPC/IPC_sendMessage/IPC_Client/build-profile.json5
+++ b/code/DocsSample/IPC/IPC_sendMessage/IPC_Client/build-profile.json5
@@ -15,7 +15,8 @@
 
 {
   "app": {
-    "signingConfigs": [],
+    "signingConfigs": [
+    ],
     "products": [
       {
         "name": "default",
