--- a/code/DocsSample/IPC/IPC_sendMessage/IPC_Client/entry/src/ohosTest/module.json5
+++ b/code/DocsSample/IPC/IPC_sendMessage/IPC_Client/entry/src/ohosTest/module.json5
@@ -21,6 +21,7 @@
       "default"
     ],
     "deliveryWithInstall": true,
-    "installationFree": false
+    "installationFree": false,
+
   }
 }
