--- a/code/DocsSample/IPC/IPC_sendMessage/IPC_Stub/build-profile.json5
+++ b/code/DocsSample/IPC/IPC_sendMessage/IPC_Stub/build-profile.json5
@@ -15,7 +15,8 @@
 
 {
   "app": {
-    "signingConfigs": [],
+    "signingConfigs": [
+    ],
     "products": [
       {
         "name": "default",
