--- a/code/DocsSample/Media/Camera/RotationDisplayCamera/build-profile.json5
+++ b/code/DocsSample/Media/Camera/RotationDisplayCamera/build-profile.json5
@@ -21,9 +21,10 @@
       {
         "name": "default",
         "signingConfig": "default",
-        "targetSdkVersion": "6.0.0(20)",
-        "compatibleSdkVersion": "6.0.0(20)",
-        "runtimeOS": "HarmonyOS",
+        "compileSdkVersion": 20,
+        "compatibleSdkVersion": 20,
+        "targetSdkVersion": 20,
+        "runtimeOS": "OpenHarmony"
         "buildOption": {
           "strictMode": {
             "caseSensitiveCheck": true,
