--- a/code/DocsSample/Media/Camera/DualPreview/build-profile.json5
+++ b/code/DocsSample/Media/Camera/DualPreview/build-profile.json5
@@ -24,7 +24,7 @@
         "compileSdkVersion": 20,
         "compatibleSdkVersion": 20,
         "targetSdkVersion": 20,
-        "runtimeOS": "OpenHarmony"
+        "runtimeOS": "OpenHarmony",
         "buildOption": {
           "strictMode": {
             "caseSensitiveCheck": true,
