--- a/code/DocsSample/Media/Camera/preconfig/oh-package.json5
+++ b/code/DocsSample/Media/Camera/preconfig/oh-package.json5
@@ -23,8 +23,5 @@
   "license": "",
   "dependencies": {
   },
-  "devDependencies": {
-    "@ohos/hypium": "1.0.16-rc2",
-    "@ohos/hamock": "1.0.1-rc2"
-  }
+  "devDependencies": {}
 }
