--- a/code/BasicFeature/Native/NdkVulkan/entry/src/ohosTest/module.json5
+++ b/code/BasicFeature/Native/NdkVulkan/entry/src/ohosTest/module.json5
@@ -20,8 +20,7 @@
     "mainElement": "TestAbility",
     "deviceTypes": [
       "default",
-      "tablet",
-      "2in1"
+      "tablet"
     ],
     "deliveryWithInstall": true,
     "installationFree": false,
