--- a/code/DocsSample/Media/Camera/cameraAnimSample/oh-package.json5
+++ b/code/DocsSample/Media/Camera/cameraAnimSample/oh-package.json5
@@ -23,7 +23,5 @@
   "license": "",
   "dependencies": {
   },
-  "devDependencies": {
-    "@ohos/hypium": "1.0.18"
-  }
+  "devDependencies": {}
 }
