--- a/code/DocsSample/Media/Camera/RotationDisplayCamera/oh-package.json5
+++ b/code/DocsSample/Media/Camera/RotationDisplayCamera/oh-package.json5
@@ -18,7 +18,5 @@
   "description": "Please describe the basic information.",
   "dependencies": {
   },
-  "devDependencies": {
-    "@ohos/hypium": "1.0.18"
-  }
+  "devDependencies": {}
 }
