升级部分sample编译sdk版本 修改升级sdk后编译问题
Signed-off-by: haoxiaohui <haoxiaohui1@huawei.com>

--- a/code/Performance/renderGroup/product/phone/entry/oh-package.json5
+++ b/code/Performance/renderGroup/product/phone/entry/oh-package.json5
@@ -7,6 +7,6 @@
   "main": "",
   "version": "1.0.0",
   "dependencies": {
-    "@ohos/rendergroup": "file:../../../feature/renderGroup"
+    "@ohos/rendergroup": "file:../../../feature/rendergroup"
   }
 }
