--- a/code/Performance/renderGroup/feature/rendergroup/oh-package.json5
+++ b/code/Performance/renderGroup/feature/rendergroup/oh-package.json5
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2023 Huawei Device Co., Ltd.
+ * Copyright (c) 2026 Huawei Device Co., Ltd.
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
@@ -14,12 +14,12 @@
  */
 
 {
-  "module": {
-    "name": "renderGroup",
-    "type": "har",
-    "deviceTypes": [
-      "default",
-      "tablet"
-    ]
-  }
+  "license": "Apache-2.0",
+  "devDependencies": {},
+  "author": "",
+  "name": "rendergroup",
+  "description": "Please describe the basic information.",
+  "main": "Index.ets",
+  "version": "1.0.0",
+  "dependencies": {}
 }
