--- a/code/Solutions/Tools/ArkTSClock/build-profile.json5
+++ b/code/Solutions/Tools/ArkTSClock/build-profile.json5
@@ -15,13 +15,14 @@
 
 {
   "app": {
-    "signingConfigs": [],
+    "signingConfigs": [
+    ],
     "products": [
       {
         "name": "default",
         "signingConfig": "default",
-        "compileSdkVersion": 20,
-        "compatibleSdkVersion": 14,
+        "compileSdkVersion": 23,
+        "compatibleSdkVersion": 23,
         "runtimeOS": "OpenHarmony"
       }
     ]
