为音画同步播放效果添加测试用例
Signed-off-by: 未来可期 <hongchuanlong@h-partners.com>

--- a/code/BasicFeature/Media/AudioToVideoSync/entry/build-profile.json5
+++ b/code/BasicFeature/Media/AudioToVideoSync/entry/build-profile.json5
@@ -25,7 +25,11 @@
   },
   "targets": [
     {
-      "name": "default"
+      "name": "default",
+      "runtimeOS": "OpenHarmony"
+    },
+    {
+      "name": "ohosTest"
     }
   ]
 }
