--- a/code/BasicFeature/Media/AudioToVideoSync/oh-package.json5
+++ b/code/BasicFeature/Media/AudioToVideoSync/oh-package.json5
@@ -18,5 +18,7 @@
   "description": "Please describe the basic information.",
   "dependencies": {
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@ohos/hypium": "1.0.6"
+  }
 }
