--- a/code/DocsSample/ArkTS/ArkTsConcurrent/MultithreadedConcurrency/WorkerIntroduction/build-profile.json5
+++ b/code/DocsSample/ArkTS/ArkTsConcurrent/MultithreadedConcurrency/WorkerIntroduction/build-profile.json5
@@ -57,6 +57,22 @@
     {
       "name": "har",
       "srcPath": "./har",
+    },
+    {
+      "name": "testworkers",
+      "srcPath": "./testworkers",
+      "targets": [
+        {
+          "name": "default",
+          "applyToProducts": [
+            "default"
+          ]
+        }
+      ]
+    },
+    {
+      "name": "mainAbility",
+      "srcPath": "./mainAbility",
     }
   ]
 }
