--- a/code/DocsSample/ArkTS/ArkTsConcurrent/MultithreadedConcurrency/WorkerIntroduction/entry/oh-package.json5
+++ b/code/DocsSample/ArkTS/ArkTsConcurrent/MultithreadedConcurrency/WorkerIntroduction/entry/oh-package.json5
@@ -22,6 +22,9 @@
   "author": "",
   "license": "",
   "dependencies": {
+    // [StartExclude config_har_dependency]
+    "testworkers": "file:../testworkers",
+    // [EndExclude config_har_dependency]
     "har": "file:../har"
   }
 }
