--- a/code/DocsSample/Media/Camera/NDKMinResolutionSample/entry/src/main/cpp/CMakeLists.txt
+++ b/code/DocsSample/Media/Camera/NDKMinResolutionSample/entry/src/main/cpp/CMakeLists.txt
@@ -8,4 +8,4 @@ include_directories(${NATIVERENDER_ROOT_PATH}
                     ${NATIVERENDER_ROOT_PATH}/include)
 
 add_library(entry SHARED main.cpp camera_manager.cpp)
-target_link_libraries(entry PUBLIC libohcamera.so libace_napi.z.so libnative_buffer.so libhilog_ndk.z.so librawfile.z.so libohimage.so)
+target_link_libraries(entry PUBLIC libohcamera.so libace_napi.z.so libnative_buffer.so libhilog_ndk.z.so librawfile.z.so libohimage.so libnative_display_manager.so)
