update: 更新文件 module.json5 修正metadata的示例
Signed-off-by: jiangminsen <jiangminsen@h-partners.com>

--- a/code/DocsSample/bmsSample/ModuleConfigurationFile01/entry/src/main/module.json5
+++ b/code/DocsSample/bmsSample/ModuleConfigurationFile01/entry/src/main/module.json5
@@ -77,8 +77,10 @@
         "startWindowBackground": "$color:start_window_background",
         "exported": true,
         // [EndExclude module_abilities_skills]
+        // [EndExclude module_abilities_metadata]
         "skills": [
           // [StartExclude module_all]
+          // [StartExclude module_abilities_metadata]
           {
             "actions": [
               "ohos.want.action.home"
